{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 15,
  "lineage": "3a9bcf5f-ba8f-eacc-98d4-6314ac39318f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9749278dd13a93d",
            "domain": "vpc",
            "id": "eipalloc-0d9749278dd13a93d",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-72-224-181.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.72.224.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-NAT"
            },
            "tags_all": {
              "Name": "EIP-NAT"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw-production",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116313440999:internet-gateway/igw-0b89e0db8849bf49a",
            "id": "igw-0b89e0db8849bf49a",
            "owner_id": "116313440999",
            "tags": {
              "Name": "igw-prod"
            },
            "tags_all": {
              "Name": "igw-prod"
            },
            "vpc_id": "vpc-09f3e788c343fd325"
          },
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "pub-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9749278dd13a93d",
            "connectivity_type": "public",
            "id": "nat-0eb74132a76dd753f",
            "network_interface_id": "eni-096fdf3baedeaa839",
            "private_ip": "30.0.1.226",
            "public_ip": "3.72.224.181",
            "subnet_id": "subnet-0a0b55b14b68afb84",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.gw-production",
            "aws_subnet.sb1-pub",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116313440999:route-table/rtb-08fcd89372cda1a25",
            "id": "rtb-08fcd89372cda1a25",
            "owner_id": "116313440999",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b89e0db8849bf49a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-production"
            },
            "tags_all": {
              "Name": "rt-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f3e788c343fd325"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw-production",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-production-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116313440999:route-table/rtb-069cdd8d93339fefb",
            "id": "rtb-069cdd8d93339fefb",
            "owner_id": "116313440999",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0eb74132a76dd753f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-production-private"
            },
            "tags_all": {
              "Name": "rt-production-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f3e788c343fd325"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.gw-production",
            "aws_nat_gateway.pub-nat-gw",
            "aws_subnet.sb1-pub",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cbbdf89710ffe03",
            "route_table_id": "rtb-08fcd89372cda1a25",
            "subnet_id": "subnet-0a0b55b14b68afb84"
          },
          "dependencies": [
            "aws_internet_gateway.gw-production",
            "aws_route_table.rt-production",
            "aws_subnet.sb1-pub",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f89802dccb13af3",
            "route_table_id": "rtb-08fcd89372cda1a25",
            "subnet_id": "subnet-09fa1bf69e163e55b"
          },
          "dependencies": [
            "aws_internet_gateway.gw-production",
            "aws_route_table.rt-production",
            "aws_subnet.sb2-pub",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a57e18f0fa0a984c",
            "route_table_id": "rtb-069cdd8d93339fefb",
            "subnet_id": "subnet-01d5170179487aec6"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.gw-production",
            "aws_nat_gateway.pub-nat-gw",
            "aws_route_table.rt-production-private",
            "aws_subnet.sb1-private",
            "aws_subnet.sb1-pub",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0d8bf9ba27268b5",
            "route_table_id": "rtb-069cdd8d93339fefb",
            "subnet_id": "subnet-0507370144fa9debb"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.gw-production",
            "aws_nat_gateway.pub-nat-gw",
            "aws_route_table.rt-production-private",
            "aws_subnet.sb1-pub",
            "aws_subnet.sb2-private",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb1-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116313440999:subnet/subnet-01d5170179487aec6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "30.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d5170179487aec6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116313440999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sb1-private"
            },
            "tags_all": {
              "Name": "sb1-private"
            },
            "vpc_id": "vpc-09f3e788c343fd325"
          },
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb1-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116313440999:subnet/subnet-0a0b55b14b68afb84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0b55b14b68afb84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116313440999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sb1-pub"
            },
            "tags_all": {
              "Name": "sb1-pub"
            },
            "vpc_id": "vpc-09f3e788c343fd325"
          },
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116313440999:subnet/subnet-0507370144fa9debb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "30.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0507370144fa9debb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116313440999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sb2-private"
            },
            "tags_all": {
              "Name": "sb2-private"
            },
            "vpc_id": "vpc-09f3e788c343fd325"
          },
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb2-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116313440999:subnet/subnet-09fa1bf69e163e55b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "30.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fa1bf69e163e55b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116313440999",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sb2-pub"
            },
            "tags_all": {
              "Name": "sb2-pub"
            },
            "vpc_id": "vpc-09f3e788c343fd325"
          },
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:116313440999:vpc/vpc-09f3e788c343fd325",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-0db8be510562e9fa0",
            "default_route_table_id": "rtb-04f8d14e5e1f4ccfc",
            "default_security_group_id": "sg-004174a325274cb53",
            "dhcp_options_id": "dopt-0dd4773b93567c7a1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09f3e788c343fd325",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f8d14e5e1f4ccfc",
            "owner_id": "116313440999",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}